# Project-Starter-Pack

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CURSOR_USER_RULE_SNIPPET.md  FOR_USER.md  INDUSTRY_STANDARD_VERSIONING.md  LICENSE  README.md  WORKFLOW.md
.cursor/rules/: karpathy-guidelines.mdc  starter-pack-bootstrap.mdc
.github/workflows/: ci.yml
docs/: GITHUB_SETUP_WALKTHROUGH.md  HANDOFF_MESSAGES.md  PLATFORMS.md  PSP_REVIEW_KARPATHY_LENS.md  PUBLISHING.md  THIRD_PARTY_NOTICES.md  UPGRADE_NOTES_CHILD_PROJECTS.md
scripts/: bootstrap_new_project.py
template/tauri-vite-ts/: .gitignore  AGENTS.md.template  DESIGN.md  FOR_USER.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
template/tauri-vite-ts/.cursor/: hooks.json
template/tauri-vite-ts/.cursor/rules/: deletion-safety.mdc  github-setup-offer.mdc
template/tauri-vite-ts/src/: main.ts  style.css
template/tauri-vite-ts/src-tauri/: Cargo.toml  tauri.conf.json
template/tauri-vite-ts/src-tauri/src/: main.rs
template/web-vite-ts/: AGENTS.md.template  DESIGN.md  FOR_USER.md  README.md  package-lock.json  package.json  vite.config.ts
template/web-vite-ts/.cursor/rules/: github-push-offer.mdc  github-setup-offer.mdc  karpathy-guidelines.mdc  user-project-standard.mdc
template/web-vite-ts/docs/: README.md
template/web-vite-ts/ideas/: INBOX.md
template/web-vite-ts/src/: main.ts  style.css
tests/: test_bootstrap_helpers.py
