[package]
name = "{{RUST_CRATE_NAME}}"
version = "0.0.1"
description = "{{PROJECT_TITLE}}"
authors = ["you"]
edition = "2021"

[lib]
name = "{{RUST_LIB_NAME}}"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
